--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -165,3 +165,8 @@ body, html, #root {
     height: 100%;
     width: 100%;
 }
+.marker-cluster div {
+  font-size: 15px !important;
+  font-weight: bold !important;
+
+}
